Version xxxxxxxx
================

- Big rewrite using more STL features, carrying out general tidying up and
  breaking library compatibility.
- gds2pov output optimisations - only include loops for AREFs where necessary.
- Fix non-orthogonal paths. Thanks to Norihiro KAMAE.

Version 20080229
================

- Number of fixes to provide gcc 4.3 support.
- New feature for gds2pov and gds2svg: use the "-g" option to automatically
  generate a process file with information based on the layers found in the
  supplied gds2 file.


Version 20070827
================

- Minor fix for building on multilib Linux x86_64 machines. Thanks to
  Chitlesh Goorah.


Version 20070815
================

- Build fixes for Windows.
- Update library search path on install on Unix systems.


Version 20070813
================

- Fixed erroneous URLs in the help for each program.
- Changed the build chain to use cmake instead of autotools.

Thanks to Mark Wilmott:

- Top level cell is correctly placed within the canvas when using gds2svg.


Version 20070426
================

Thanks to Matt Hopcroft:

- Layers with height=0 were not being processed (should've been
  thickness=0).


Version 20061130
================

- Fixes to the build process.
- Memory stability fixes.


Version 20061012
================

- Fixed compile errors on msys due to u_int16_t being defined as uint16_t.

These changes thanks to Arun Persaud:

- Added simple support for Boxes (they are treated as Boundaries)
- gdsoglviewer uses the config.txt settings to set the initial position.
- gdsoglviewer displays a camera and lookat position which can be used in gds2pov.
- Zero width paths no longer prevent the rest of the GDS2 file being parsed.
- An error in the type of the STYPTABLE record was fixed.

These changes suggested by Frederic Pecourt:

- Added the option of using a camera include file in gds2pov rather than
  calculating the camera position inside the main pov file.

Version 20060301
================
